--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,45 +13,11 @@
             "altText": "Major League Hacking 2025 Hackathon Season"
         }
     },
-    "faq": {
-        "title": "Frequently Asked Questions",
-        "contactText": "Can't find your answer? Email us your question at",
-        "contactEmail": "hello@spurhacks.com",
-        "accessibility": {
-            "collapseTitle": "Collapse",
-            "expandTitle": "Expand"
-        },
-        "items": [
-            {
-                "question": "What is SpurHacks?",
-                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
-            },
-            {
-                "question": "Who can participate?",
-                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
-            },
-            {
-                "question": "How many people can be on a team?",
-                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
-            },
-            {
-                "question": "What if I have no experience in quantum computing, web3, or AI?",
-                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
-            },
-            {
-                "question": "What should I bring?",
-                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
-            },
-            {
-                "question": "Are there any accommodations?",
-                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
-            }
-        ]
-    },
+
     "hero": {
-        "alt": "SPURHACKS",
+        "alt": "SpurHacks 2025",
         "eventDetails": {
-            "date": "June 20-22, 2025",
+            "date": "June 20th - 22nd, 2025",
             "format": "In-person",
             "location": "Waterloo, ON"
         },
@@ -98,7 +64,11 @@
             "first": "A Place to Innovate.",
             "second": "Build the Future."
         },
-        "description": "Join over  maecenas aliquam primis duis viverra integer. Vehicula nulla bibendum facilisis per quis vehicula risus donec euismod. Curabitur aliquet sem vel fermentum lacinia. Aliquam sodales neque lorem, aliquam luctus tellus viverra ut. Curabitur aliquet sem vel fermentum lacinia. Aliquam sodales neque lorem, aliquam luctus tellus viverra ut."
+        "description": "Join over 2,000 students from across Canada at SpurHacks; pushing the boundaries of what a hackathon can be. Discover a community of like-minded individuals, learn from industry experts, and build innovative projects that will shape the future of technology. Whether you're a seasoned hacker or a first-time participant, SpurHacks is the perfect place to unleash your creativity and make lasting connections.",
+        "travel": {
+            "heading": "Coming from out of province?",
+            "description": "If you're traveling from outside Ontario, we'll cover your travel costs - but spots are limited and first-come, first-served. So don’t sleep on it!"
+        }
     },
     "about2": {
         "heading": "Quantum. Web3. AI.",
@@ -149,6 +119,41 @@
                 "prefix": "",
                 "suffix": "B",
                 "allowDecimal": true
+            }
+        ]
+    },
+    "faq": {
+        "title": "Frequently Asked Questions",
+        "contactText": "Can't find your answer? Email us your question at",
+        "contactEmail": "hello@spurhacks.com",
+        "accessibility": {
+            "collapseTitle": "Collapse",
+            "expandTitle": "Expand"
+        },
+        "items": [
+            {
+                "question": "What is SpurHacks?",
+                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
+            },
+            {
+                "question": "Who can participate?",
+                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
+            },
+            {
+                "question": "How many people can be on a team?",
+                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
+            },
+            {
+                "question": "What if I have no experience in quantum computing, web3, or AI?",
+                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
+            },
+            {
+                "question": "What should I bring?",
+                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
+            },
+            {
+                "question": "Are there any accommodations?",
+                "answer": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi."
             }
         ]
     },
