Update heading for about2

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,7 +70,7 @@
     },
 
     "about2": {
-        "heading": "Quantum. High-Performance Computing. AI.",
+        "heading": "Quantum. AI. High-Performance Computing.",
         "description": "Spur enables a community that spurs innovation and support like no other incubator in Canada, offering unparalleled resources in quantum computing, high-performance computing, decentralized computing, and artificial intelligence. A strong and experienced mentorship program alongside a collaborative ecosystem has secured over $1B+ in assets under management and over 200 successful startups in the past decade.",
         "buttons": {
             "companySite": "COMPANY SITE"
