--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -107,6 +107,14 @@
                 "prefix": "",
                 "suffix": "+",
                 "allowDecimal": false
+            },
+            {
+                "label": "Invested in Projects",
+                "value": 23.4,
+                "prefix": "$",
+                "suffix": "B+",
+                "allowDecimal": true
+
             }
         ]
     },
