--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -163,7 +163,7 @@
             },
             {
                 "question": "🍕 What food will be provided?",
-                "answer": "We will provide a variety of meals and snacks throughout the event, including breakfast, lunch, and dinner. If you have any dietary restrictions or allergies, please let us know in your application."
+                "answer": "We’re leveling up the hackathon food game—no cold pizza here. Expect a rotating menu of fresh meals for breakfast, lunch, and dinner, plus snacks and drinks to keep you fueled all weekend. Have dietary restrictions? We've got you covered—just let us know in your application. Come for the innovation but you might just stay for the food!"
             },
             {
                 "question": "🏆 What prizes are available?",
@@ -171,7 +171,7 @@
             },
             {
                 "question": "👋 Who can participate?",
-                "answer": "The event is open to all, regardless of their level of experience. Whether you're a beginner or an experienced hacker, we welcome you to join us and showcase your skills. We encourage participants from all backgrounds and disciplines to apply."
+                "answer": "SpurHacks is open to everyone—no matter your background or experience level. Whether you're a business student with big ideas, a designer with an eye for detail, or a programmer ready to build, there's a place for you here. We believe the best ideas come from diverse teams, so we welcome participants from all disciplines to collaborate, create, and pitch the future together."
             },
             {
                 "question": "🧑‍🤝‍🧑 How many people can be on a team?",
@@ -183,7 +183,7 @@
             },
             {
                 "question": "💼 What should I bring?",
-                "answer": "We recommend bringing your laptop, charger, comfortable clothes, and any other personal items you may need. We will provide all necessary equipment and resources for the event. If you have any specific tools or software you would like to use, feel free to bring them along."
+                "answer": "We recommend bringing your laptop, charger, and any specific tools or software you like to use. We also recommend packing comfortable clothes, toiletries (toothbrush, deodorant, etc.), and anything else you need to feel your best over the weekend. We’ll handle the rest—meals, workspace, and all the resources you’ll need."
             },
             {
                 "question": "🏠 Are there any accommodations?",
