--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -162,7 +162,7 @@
                 "answer": "The event is completely free to attend! We will provide food, drinks, and swag for all participants. However, spots are limited and on a first-come, first-served basis."
             },
             {
-                "question": "🍕 What food will be provided?",
+                "question": "🍣 What food will be provided?",
                 "answer": "We’re leveling up the hackathon food game—no cold pizza here. Expect a rotating menu of fresh meals for breakfast, lunch, and dinner, plus snacks and drinks to keep you fueled all weekend. Have dietary restrictions? We've got you covered—just let us know in your application. Come for the innovation but you might just stay for the food!"
             },
             {
