Update discord link

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -147,7 +147,7 @@
             },
             {
                 "question": "❓ What’s unique about SpurHacks compared to a regular hackathon or case competition?",
-                "answer": "SpurHacks isn’t just a hackathon — it’s a launchpad for real-world impact. With the scale to host up to 2,000 participants, SpurHacks gives you 48 hours to design, build, and pitch innovative solutions with the chance to secure actual investment from a leading venture firm. Whether you're starting from scratch, bringing an existing idea, or looking for collaborators, SpurHacks provides the resources, mentorship, and funding opportunities to take your project beyond the weekend. Build at SpurHacks — and build the future you're aiming for."
+                "answer": "SpurHacks isn’t just a hackathon - it’s a launchpad for real-world impact. With the scale to host up to 2,000 participants, SpurHacks gives you 48 hours to design, build, and pitch innovative solutions with the chance to secure actual investment from a leading venture firm. Whether you're starting from scratch, bringing an existing idea, or looking for collaborators, SpurHacks provides the resources, mentorship, and funding opportunities to take your project beyond the weekend. Build at SpurHacks - and build the future you're aiming for."
             },
             {
                 "question": "👀 What cool things are happening at SpurHacks?",
@@ -163,7 +163,7 @@
             },
             {
                 "question": "🍣 What food will be provided?",
-                "answer": "We’re leveling up the hackathon food game—no cold pizza here. Expect a rotating menu of fresh meals for breakfast, lunch, and dinner, plus snacks and drinks to keep you fueled all weekend. Have dietary restrictions? We've got you covered—just let us know in your application. Come for the innovation but you might just stay for the food!"
+                "answer": "We’re leveling up the hackathon food game - no cold pizza here. Expect a rotating menu of fresh meals for breakfast, lunch, and dinner, plus snacks and drinks to keep you fueled all weekend. Have dietary restrictions? We've got you covered - just let us know in your application. Come for the innovation but you might just stay for the food!"
             },
             {
                 "question": "🏆 What prizes are available?",
@@ -171,7 +171,7 @@
             },
             {
                 "question": "👋 Who can participate?",
-                "answer": "SpurHacks is open to everyone—no matter your background or experience level. Whether you're a business student with big ideas, a designer with an eye for detail, or a programmer ready to build, there's a place for you here. We believe the best ideas come from diverse teams, so we welcome participants from all disciplines to collaborate, create, and pitch the future together."
+                "answer": "SpurHacks is open to everyone - no matter your background or experience level. Whether you're a business student with big ideas, a designer with an eye for detail, or a programmer ready to build, there's a place for you here. We believe the best ideas come from diverse teams, so we welcome participants from all disciplines to collaborate, create, and pitch the future together."
             },
             {
                 "question": "🧑‍🤝‍🧑 How many people can be on a team?",
@@ -183,7 +183,7 @@
             },
             {
                 "question": "💼 What should I bring?",
-                "answer": "We recommend bringing your laptop, charger, and any specific tools or software you like to use. We also recommend packing comfortable clothes, toiletries (toothbrush, deodorant, etc.), and anything else you need to feel your best over the weekend. We’ll handle the rest—meals, workspace, and all the resources you’ll need."
+                "answer": "We recommend bringing your laptop, charger, and any specific tools or software you like to use. We also recommend packing comfortable clothes, toiletries (toothbrush, deodorant, etc.), and anything else you need to feel your best over the weekend. We’ll handle the rest - meals, workspace, and all the resources you’ll need."
             },
             {
                 "question": "🏠 Are there any accommodations?",
