remove emojis from faq

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -141,51 +141,51 @@
         },
         "items": [
             {
-                "question": "🚀 What is SpurHacks?",
+                "question": "What is SpurHacks?",
                 "answer": "SpurHacks is Spur's premiere hackathon, poised to be Canada's largest hackathon hosted at SPUR Campus - a venue with a rich history in Canadian history. This 3-day overnight event, running from June 20th to June 22nd, will welcome over 2,000 students from all across the Canadian tech sphere."
             },
             {
-                "question": "❓ What’s unique about SpurHacks compared to a regular hackathon or case competition?",
-                "answer": "SpurHacks isn’t just a hackathon - it’s a launchpad for real-world impact. With the scale to host up to 2,000 participants, SpurHacks gives you 48 hours to design, build, and pitch innovative solutions with the chance to secure actual investment from a leading venture firm. Whether you're starting from scratch, bringing an existing idea, or looking for collaborators, SpurHacks provides the resources, mentorship, and funding opportunities to take your project beyond the weekend. Build at SpurHacks - and build the future you're aiming for."
+                "question": "What's unique about SpurHacks compared to a regular hackathon or case competition?",
+                "answer": "SpurHacks isn't just a hackathon - it's a launchpad for real-world impact. With the scale to host up to 2,000 participants, SpurHacks gives you 48 hours to design, build, and pitch innovative solutions with the chance to secure actual investment from a leading venture firm. Whether you're starting from scratch, bringing an existing idea, or looking for collaborators, SpurHacks provides the resources, mentorship, and funding opportunities to take your project beyond the weekend. Build at SpurHacks - and build the future you're aiming for."
             },
             {
-                "question": "👀 What cool things are happening at SpurHacks?",
+                "question": "What cool things are happening at SpurHacks?",
                 "answer": "SpurHacks will feature a variety of workshops, mentorship opportunities, and networking events with industry professionals. Alongside this, we'll have a tonne of games, tournaments, and arcade-esque activities to keep you entertained throughout the event. We will also have a variety of food and drinks available for all participants."
             },
             {
-                "question": "🗓️ When and where is the event?",
+                "question": "When and where is the event?",
                 "answer": "The event will take place from June 20th to June 22nd, 2025 and will be an overnight event. The event will be held in-person at the SPUR Campus in Waterloo, Ontario. The address is 2240 University Ave, Waterloo, ON N2K 0A9, Canada."
             },
             {
-                "question": "💰 How much does it cost to attend?",
+                "question": "How much does it cost to attend?",
                 "answer": "The event is completely free to attend! We will provide food, drinks, and swag for all participants. However, spots are limited and on a first-come, first-served basis."
             },
             {
-                "question": "🍣 What food will be provided?",
-                "answer": "We’re leveling up the hackathon food game - no cold pizza here. Expect a rotating menu of fresh meals for breakfast, lunch, and dinner, plus snacks and drinks to keep you fueled all weekend. Have dietary restrictions? We've got you covered - just let us know in your application. Come for the innovation but you might just stay for the food!"
+                "question": "What food will be provided?",
+                "answer": "We're leveling up the hackathon food game - no cold pizza here. Expect a rotating menu of fresh meals for breakfast, lunch, and dinner, plus snacks and drinks to keep you fueled all weekend. Have dietary restrictions? We've got you covered - just let us know in your application. Come for the innovation but you might just stay for the food!"
             },
             {
-                "question": "🏆 What prizes are available?",
+                "question": "What prizes are available?",
                 "answer": "We have over $100k in cash prizes available for participants! Prizes will be awarded for various categories, targetted towards people who are just starting out in tech, and people who are well versed in the industry. Stay tuned for more details!"
             },
             {
-                "question": "👋 Who can participate?",
+                "question": "Who can participate?",
                 "answer": "SpurHacks is open to everyone - no matter your background or experience level. Whether you're a business student with big ideas, a designer with an eye for detail, or a programmer ready to build, there's a place for you here. We believe the best ideas come from diverse teams, so we welcome participants from all disciplines to collaborate, create, and pitch the future together."
             },
             {
-                "question": "🧑‍🤝‍🧑 How many people can be on a team?",
+                "question": "How many people can be on a team?",
                 "answer": "Teams can consist of up to 4 members. You can form a team with your friends or join one at the event. If you don't have a team, don't worry! We'll help you find one."
             },
             {
-                "question": "✨ What if I have no experience in tech or business?",
+                "question": "What if I have no experience in tech or business?",
                 "answer": "No problem! SpurHacks is designed to be inclusive and welcoming to all participants, regardless of their level of experience. We will have workshops, mentors, and resources available to help you learn and grow throughout the event. Don't hesitate to apply!"
             },
             {
-                "question": "💼 What should I bring?",
-                "answer": "We recommend bringing your laptop, charger, and any specific tools or software you like to use. We also recommend packing comfortable clothes, toiletries (toothbrush, deodorant, etc.), and anything else you need to feel your best over the weekend. We’ll handle the rest - meals, workspace, and all the resources you’ll need."
+                "question": "What should I bring?",
+                "answer": "We recommend bringing your laptop, charger, and any specific tools or software you like to use. We also recommend packing comfortable clothes, toiletries (toothbrush, deodorant, etc.), and anything else you need to feel your best over the weekend. We'll handle the rest - meals, workspace, and all the resources you'll need."
             },
             {
-                "question": "🏠 Are there any accommodations?",
+                "question": "Are there any accommodations?",
                 "answer": "Yes! The venue will be open 24-hours, and has ample space to work in and sleep! Feel free to bring sleeping bags, pillows, and blankets. If you have any specific requests or needs, please let us know in your application."
             }
         ]
