Add tiktok icon to social media bar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,10 @@
         "x": {
             "ariaLabel": "Twitter",
             "title": "Twitter Logo"
+        },
+        "tiktok": {
+            "ariaLabel": "TikTok",
+            "title": "TikTok Logo"
         }
     },
 
