Update volunteer app button text

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,7 +48,7 @@
         "buttons": {
             "apply": "APPLY NOW",
             "sponsor": "BECOME A SPONSOR",
-            "talent": "VOLUNTEER APPLICATION"
+            "talent": "BECOME A VOLUNTEER"
         },
         "countdown": {
             "days": "DAYS",
